2010-11-11  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] QWebScriptWorld::world() may crash
        https://bugs.webkit.org/show_bug.cgi?id=49342

        * Api/qwebscriptworld.cpp:
        (QWebScriptWorld::world):

2010-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Add an API for overriding the actual visible content rect in WebCore
        https://bugs.webkit.org/show_bug.cgi?id=49373

        * Api/qwebpage.cpp:
        (QWebPage::setActualVisibleContentRect):
        * Api/qwebpage.h:

2010-11-11  Andreas Kling  <kling@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        FrameView: Don't clip to visibleContentRect in paintEntireContents mode
        https://bugs.webkit.org/show_bug.cgi?id=49375

        Use paintEntireContents in combination with tiling, allowing to
        actually set visibleContentRect to something different from
        the actual contents size.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::updateResizesToContentsForPage):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage):

2010-11-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r71733.
        http://trac.webkit.org/changeset/71733
        https://bugs.webkit.org/show_bug.cgi?id=49319

        made qt bot crashy and sad (Requested by kling on #webkit).

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::updateResizesToContentsForPage):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage):

2010-11-10  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Andreas Kling.

        Use paintEntireContents in combination with tiling, allowing to
        actually set visibleContentRect to something different from
        the actual contents size.
