@@ -1,3 +1,15 @@
+2010-11-12  Benjamin Poulain  <benjamin.poulain@nokia.com>
+
+        Reviewed by Andreas Kling.
+
+        [Qt] Need to implement WebKit::pluginWillHandleLoadError for WebKit2
+        https://bugs.webkit.org/show_bug.cgi?id=48764
+
+        Add the missing error.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::FrameLoaderClientQt::pluginWillHandleLoadError):
+
 2010-11-11  Yi Shen  <yi.4.shen@nokia.com>
 
         Reviewed by Andreas Kling.
